@@ -66,6 +66,9 @@
 # Amount of time a project will wait for git to load new changesets before failing
 # Configuration.git_load_new_changesets_timeout = 5.minutes
 
+# Disable URLs like 
+# Configuration.disable_code_browsing = true
+
 # To delete build when there are more than a certain number present, uncomment this line - it will make the dashboard 
 # perform better
 # BuildReaper.number_of_builds_to_keep = 20
@@ -73,3 +76,4 @@
 # any files that you'd like to override in cruise, keep in ~/.cruise, and copy over when this file is loaded like this
 site_css = CRUISE_DATA_ROOT + "/site.css"
 FileUtils.cp site_css, RAILS_ROOT + "/public/stylesheets/site.css" if File.exists? site_css
+
